@@ -1,4 +1,7 @@
 1.2.2p3:
+    Core:
+    * FIX: get_average(): Gracefully handle time anomlies of target systems
+
     Checks & Agents:
     * FIX: winperf_processor: fix case where CPU percent is exactly 100%
     * FIX: blade_powerfan: fix mixup of default levels 50/40 -> 40/50
@@ -12,7 +15,7 @@
     * FIX: fix layout of Auxiliary tags table
     * FIX: avoid exception when called first time and first page ist host tags
 
-   
+
 1.2.2p2:
     Core:
     * FIX: better error message in case of exception in SNMP handling
